--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,10 @@
 @import "goToArton";
 @import "japanameTable";
 @import "charsTable";
+@import "topSearchContainer";
+@import "hangingRisumaru";
+@import "risumaruSearch";
+@import "subLayoutArticle";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
