--- a/views/atejis/selected.jade
+++ b/views/atejis/selected.jade
@@ -15,9 +15,9 @@ block append head-end
   //link(rel='stylesheet', href='/stylesheets/webfont.css') 
 
 block sub-content
-  div.text-center
+  article.text-center
     include /include/ateji_box
-    h2.h4 The japaname of 
+    h1.h4 The japaname of 
       wbr
       strong(style="text-transform:capitalize;color:red;") #{name.original}
       br
