--- a/views/template/sub_layout.jade
+++ b/views/template/sub_layout.jade
@@ -11,7 +11,7 @@ block content
   include /template/flash_messages
   +flash_messages(notice_message,success_message,alert_message,err_message)
 
-  div
+  article.subLayoutArticle
     block sub-content
 
 block footer
