--- a/views/index.jade
+++ b/views/index.jade
@@ -8,32 +8,31 @@ block topbar
 
 block content
 
-  img(src="/images/risumaru_hang_left.png" style="position:absolute;right:0;top:0;width:20%;z-index:-1000;opacity:0.7")
 
-  div(style="height:50px;")
-  h1(style="text-align:center;") Get Your <br>
+  h1(style="text-align:center;padding-top:50px;") Get Your <br>
     img(src="/images/japaname_logo_800.png" alt="japaname" style="max-width:90%;")
 
 
+  .topSearchContainer
+    table.topSearchContainer__table
+      tr.topSearchContainer__row
+        td.topSearchContainer__cell.topSearchContainer__cell--risumaru
+          img.risumaruSearch(src="/images/risumaru_yubi_right.png")
+        td.topSearchContainer__cell.topSearchContainer__cell--search
+          japaname-searchbox(focus="true")
+          p.text-center(style="opacity:0.7")
+            br
+            |Accepts 
+            strong Alphabet
+            |, 
+            strong Hiragana
+            |, 
+            strong Katakana
+            |, 
+            strong Romaji 
+              small (Japanese way to express pronounciation)
   
-  table
-    tr
-      td(style="width:20%;opacity:0.7")
-        img(src="/images/risumaru_yubi_right.png")
-      td(style="width:80%")
-        japaname-searchbox(focus="true")
-        p.text-center(style="opacity:0.7")
-          br
-          |Accepts 
-          strong Alphabet
-          |, 
-          strong ひらがな
-          |, 
-          strong カタカナ
-          |, 
-          strong roma-ji 
-            small (Japanese way to express pronounciation)
-  
+  img.hangingRisumaru.hangingRisumaru--right(src="/images/risumaru_hang_left.png")
   ul
     li 
       a(href="/names/") Name list
