--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,6 +38,9 @@
 @import "hangingRisumaru";
 @import "risumaruSearch";
 @import "subLayoutArticle";
+@import "syllablesTable";
+@import "kanjisList";
+@import "kanjiCell";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
