--- a/scss/_jnSearchBox.scss
+++ b/scss/_jnSearchBox.scss
@@ -22,6 +22,7 @@ $jsb: "jnSearchBox";
 
   font-size:inherit;
   border-radius:0;
+  -webkit-appearance: none;
 }
 
 input[type="search"].#{$jsb}__textbox{
@@ -34,6 +35,7 @@ input[type="search"].#{$jsb}__textbox{
 
   font-size:inherit;
   border-radius:0;
+  -webkit-appearance: none;
 }
 
 
