--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@
 @import "syllablesTable";
 @import "kanjisList";
 @import "kanjiCell";
+@import "otherSyllableCell";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
