--- a/riottags/candidate-table.jade
+++ b/riottags/candidate-table.jade
@@ -1,6 +1,6 @@
 candidate-table
   table.syllablesTable
-    tbody(each="{syllable in selectedSylls}" onclick="{parent.syllableSelected}")
+    tbody(each="{syllable in selectedSyllables}" onclick="{parent.syllableSelected}")
       tr.syllablesTable__headRow(class="{syllable == usingSyllable ? 'syllablesTable__headRow--using':''}")
         th.syllablesTable__headCell {syllable.romaji} - {syllable.kana}
       tr.syllablesTable__kanjisRow(class="{syllable == usingSyllable ? 'syllablesTable__headRow--using':''}")
@@ -10,31 +10,39 @@ candidate-table
               td.kanjisList__item(each="{kanji in syllable.atejis}" ) 
                 div.kanjiCell(class="{kanji == syllable.usingKanji ? 'kanjiCell--using':''}" onclick="{parent.parent.kanjiSelected}") {kanji.kanji}
                   div.kanjiCell__meanings {kanji.meanings.join("\n")}
-                  //div.otherSyllableCell(if(syllable))
+
+              td.kanjisList__item(each="{other_syllable in syllable.siblings}" onclick="{parent.parent.changeSyllable}")
+                div.otherSyllableCell {other_syllable.romaji} 
+                  div(each="{kanji in other_syllable.atejis.slice(0,3)}") {kanji.kanji}
+                          
+
 
 
   script.
     this_tag = this;
+    //this.atejiSelector = opts.atejiSelector;
     this.syllables = opts.syllables;
     //あとでのために、kanjiに自分の親を覚えさせる
-    makeRef(this_tag.syllables);
 
 
     var twin = generateIndex2Sylls(this.syllables);
     this.index2Sylls = twin.index2Sylls ;
     this.index2SyllsRev = twin.index2SyllsRev;
 
-    var route = randomRoute(this.index2Sylls);
+
+    makeRef(this_tag.syllables, this.index2Sylls);
+
+    var route = shortestRoute(this.index2Sylls);
 
     this_tag.usingSyllable = route[0];
-    this_tag.selectedSylls= route;
+    this_tag.selectedSyllables= route;
 
+    this.fugas = [1,3,2];
 
-    this.otherSylls =  function (syll){
+    function getOtherSylls(syll, index2Sylls){
       var sylls = index2Sylls[syll.index];//array of sylls inclucing syll
-
       var i = sylls.indexOf(syll);
-      var orherSylls = sylls.splice(i,1);
+      var otherSylls = sylls.slice(0,i).concat(sylls.slice(i+1,sylls.legnth));
       return otherSylls;
     }
 
@@ -48,9 +56,66 @@ candidate-table
 
     kanjiSelected(e){
       var syllable = e.item.kanji.parent_syllable;
-      console.log(syllable);
       syllable.usingKanji = e.item.kanji;
       
+    }
+
+    changeSyllable(e){
+      var needed_syllable = e.item.other_syllable;
+      this.selectedSyllables  = changeSyllable(this.selectedSyllables ,needed_syllable ,this.index2Sylls);
+    }
+
+    function changeSyllable(current_route, needed_syllable, index2Sylls){
+      var needed_index = needed_syllable.index;
+      var route_index= 0;
+      var new_route = [];
+      var next_index = 0;
+
+
+      //必要音節にたどりつくまで、new_routeにpushしつづける
+      while(!(next_index == needed_index)){
+        new_route.push(current_route[route_index]);
+        next_index = current_route[route_index].next_index;
+        route_index ++;
+      }
+      //必要音節を、つなげた！
+      new_route.push(needed_syllable);
+
+      //後半のつなげ
+
+      var lasting_index = needed_syllable.next_index;
+
+      //次の候補
+      var next_candidates = index2Sylls[lasting_index];
+
+      //候補が存在する間
+      while(next_candidates && next_candidates.length > 0){
+        // 
+        var next = _.intersection(next_candidates, current_route);
+
+        if(next.length == 1){
+          console.log("sameas current route");
+
+          var syllable = next[0];
+          console.log(syllable);
+          var syllable_index = current_route.indexOf(syllable);
+
+          new_route = new_route.concat(current_route.slice(syllable_index));
+          break;
+        }
+        else if(next.length > 1){
+          throw new Error("impossible!");
+        }
+
+        //if(next.length == 0){
+        //適当に選ぶしかない
+        //選び方はあとで
+        var next_sillable = next_candidates[Math.floor(Math.random() * next_candidates.length)];
+        new_route.push(next_sillable);
+        var next_candidates = index2Sylls[next_sillable.next_index];
+      }
+
+      return new_route;
     }
 
 
@@ -59,7 +124,6 @@ candidate-table
       var index2SyllsRev= [];
       for(var i in syllables){
         var syll = syllables[i];
-        console.log(syll + "z");
 
         if(!index2Sylls[syll.index]){
           index2Sylls[syll.index] = [];
@@ -114,14 +178,48 @@ candidate-table
       return route;
     }
 
+    function shortestRoute(index2Sylls){
+      var route = [];
+      var index = 0;
+      while(index < index2Sylls.length){
+        var sylls = index2Sylls[index];
 
-    function makeRef(syllables){ //あとでのために、kanjiに自分の親を覚えさせる
+        var min_next_index = 100; //tekito-
+        var min_next = null;
+        for(var syll_i in sylls){
+          if(sylls[syll_i].next_index <= min_next_index){
+            min_next_index = sylls[syll_i].next_index;
+            min_next = sylls[syll_i];
+          }
+        }
+
+        var syll = min_next;
+        route.push(syll);
+        index = syll.next_index;
+      }
+      return route;
+    }
+
+
+
+
+    function makeRef(syllables, index2Sylls){ //あとでのために、kanjiに自分の親を覚えさせる
+      //すべての音節に対して
       for(var i in  syllables){
         var syllable = syllables[i];
+
+        //すべての漢字に
         for(var j in  syllable.atejis){
           var kanji = syllable.atejis[j];
+          //自分の親を覚えさせておく
           kanji.parent_syllable = syllable; //循環参照注意
         }
+
+        var siblings = getOtherSylls(syllable, index2Sylls);
+
+        syllable.siblings = siblings;
+
         syllable.usingKanji = syllable.atejis[0];
       }
     }
+
