--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,6 +42,10 @@
 @import "kanjisList";
 @import "kanjiCell";
 @import "otherSyllableCell";
+@import "selectingKanji";
+@import "atejiBox";
+@import "goNextButton";
+@import "horizonScroller";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
