--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1474,13 +1474,17 @@ input[type="search"].jnSearchBox__textbox {
   padding: 0;
   border: 0; }
 
-.syllablesTable__kanjisRow .syllablesTable__kanjisCell {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  width: 100%;
-  overflow-x: scroll;
-  text-align: center; }
+.syllablesTable__kanjisRow {
+  color: #aaa; }
+  .syllablesTable__kanjisRow--using {
+    color: #000; }
+  .syllablesTable__kanjisRow .syllablesTable__kanjisCell {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    width: 100%;
+    overflow-x: scroll;
+    text-align: center; }
 
 .kanjisList {
   overflow: hidden;
@@ -1494,33 +1498,121 @@ input[type="search"].jnSearchBox__textbox {
   margin: 0;
   padding: 0;
   border: 0;
-  width: 1.5em; }
-
-.kanjiCell {
   width: 1.5em;
-  vertical-align: top;
+  vertical-align: top; }
+
+.kanjiCell__char {
+  width: 1.4em;
+  height: 1.4em;
+  padding: 0;
+  vertical-align: middle;
   font-size: 80px;
   text-align: center;
-  line-height: 1;
-  border-radius: 40px; }
-  .kanjiCell--using {
-    background: rgba(255, 255, 255, 0.4); }
+  line-height: 1.4em;
+  border-radius: 0.7em; }
 
 .kanjiCell__meanings {
   display: none;
-  font-size: 20px; }
+  font-size: 2rem;
+  line-height: 1.2;
+  margin-top: -1em; }
 
-.syllablesTable__headRow--using .kanjiCell__meanings {
+.syllablesTable__kanjisRow--using .kanjiCell__meanings {
   display: block; }
 
-.kanjiCell--using .kanjiCell__meanings {
-  display: block; }
+.kanjiCell--using {
+  color: #000; }
+  .kanjiCell--using .kanjiCell__char {
+    background: rgba(200, 200, 255, 0.4); }
+  .kanjiCell--using .kanjiCell__meanings {
+    display: block; }
 
 .otherSyllableCell {
   height: 100%;
   width: 80px;
-  vertical-align: top;
-  background: red; }
+  vertical-align: top; }
+  .otherSyllableCell__part {
+    background: #999;
+    border-radius: 5px;
+    margin-bottom: 2px; }
+
+.selectingKanji {
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  right: 0;
+  z-index: 900;
+  background-color: rgba(255, 255, 255, 0.8); }
+
+.selectingKanji__container {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem; }
+  .selectingKanji__container::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.selectingKanji__col--box {
+  float: left;
+  display: block;
+  margin-right: 2.85714%;
+  width: 74.28571%; }
+  .selectingKanji__col--box:last-child {
+    margin-right: 0; }
+
+.selectingKanji__col--button {
+  float: left;
+  display: block;
+  margin-right: 2.85714%;
+  width: 22.85714%; }
+  .selectingKanji__col--button:last-child {
+    margin-right: 0; }
+
+.selectingKanji__original {
+  font-size: 1rem;
+  margin: 0; }
+
+.atejiBox {
+  table-layout: fixed;
+  margin: 0 auto;
+  text-align: center; }
+
+.atejiBox__cell {
+  margin: 0;
+  padding: 0;
+  border-bottom: 0;
+  line-height: 1; }
+  .atejiBox__cell.atejiBox__cell--kanji {
+    font-size: 3rem;
+    font-family: serif; }
+  .atejiBox__cell.atejiBox__cell--kana {
+    font-size: 1rem;
+    font-family: serif; }
+
+.goNextButton {
+  text-align: left;
+  box-sizing: border-box;
+  width: 100%;
+  white-space: normal;
+  padding: 1em;
+  animation-delay: 12s;
+  animation-duration: 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-name: gonext__blink; }
+  @media screen and (min-width: 600px) {
+    .goNextButton {
+      background-image: url(/images/risumaru_yubi_right.png);
+      background-repeat: no-repeat;
+      background-position: 90% bottom;
+      background-size: contain; } }
+
+.horizonScroller {
+  width: 100%;
+  overflow-x: auto; }
 
 html {
   box-sizing: border-box; }
@@ -1604,7 +1696,7 @@ div#kanji-selected-wrapper {
       display: block;
       margin-right: 2.85714%;
       width: 74.28571%;
-      font-family: "ro-nikkatsu-sei-kai-std", serif;
+      font-family: serif;
       text-align: center; }
       div#kanji-selected-wrapper div#kanji-selected-container div#kanji-selected-box:last-child {
         margin-right: 0; }
@@ -1622,23 +1714,6 @@ div#kanji-selected-wrapper {
       width: 22.85714%; }
       div#kanji-selected-wrapper div#kanji-selected-container div#kanji-button-container:last-child {
         margin-right: 0; }
-      div#kanji-selected-wrapper div#kanji-selected-container div#kanji-button-container button.gonext {
-        text-align: left;
-        box-sizing: border-box;
-        width: 100%;
-        white-space: normal;
-        padding: 1em;
-        animation-delay: 12s;
-        animation-duration: 1s;
-        animation-direction: alternate;
-        animation-iteration-count: infinite;
-        animation-name: gonext__blink; }
-        @media screen and (min-width: 600px) {
-          div#kanji-selected-wrapper div#kanji-selected-container div#kanji-button-container button.gonext {
-            background-image: url(/images/risumaru_yubi_right.png);
-            background-repeat: no-repeat;
-            background-position: 90% bottom;
-            background-size: contain; } }
 
 @keyframes gonext__blink {
   from {
@@ -1704,7 +1779,7 @@ div#kanji-selected-container-margin {
               vertical-align: middle;
               line-height: 1.2;
               font-size: 3rem;
-              font-family: "ro-nikkatsu-sei-kai-std", serif; }
+              font-family: serif; }
             #ateji-cands table td .kana-box .ateji-cands-for-kana .ateji-cand label .kanji-detail {
               display: block;
               width: 100%;
