--- a/scss/_kanjiCell.scss
+++ b/scss/_kanjiCell.scss
@@ -1,26 +1,35 @@
 .kanjiCell{
-
-  width:1.5em;
-
-  vertical-align:top;
-  font-size:80px;
-  text-align:center;
-  line-height:1;
-
-  border-radius:40px;
   &--using{
-    background:rgba(255,255,255,0.4);
   }
 }
 
+.kanjiCell__char{
+  $cellsize:1.4em; 
+
+  width:$cellsize;
+  height:$cellsize;
+  padding:0;
+
+  vertical-align:middle;
+
+  font-size:80px;
+  text-align:center;
+  line-height:$cellsize;
+
+  border-radius:$cellsize/2;
+
+}
 
 .kanjiCell__meanings{
   display:none;
-  font-size:20px;
+  font-size:2rem;
+  line-height:1.2;
+  margin-top:-1em;
+
 }
 
 //例外的だが、入れ子の書き方
-.syllablesTable__headRow--using {
+.syllablesTable__kanjisRow--using{
   .kanjiCell__meanings{
     display:block;
   }
@@ -28,8 +37,16 @@
 
 //例外的だが、入れ子の書き方
 .kanjiCell--using {
+  color:#000;
+  .kanjiCell__char{
+    background:rgba(200,200,255,0.4);
+
+  }
+
   .kanjiCell__meanings{
     display:block;
+    
   }
+
 }
 
