completed new ui

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1542,7 +1542,12 @@ input[type="search"].jnSearchBox__textbox {
   left: 0;
   right: 0;
   z-index: 900;
-  background-color: rgba(255, 255, 255, 0.8); }
+  background-color: rgba(255, 255, 255, 0.9);
+  transition-property: top;
+  transition-duration: 0.3s; }
+  .selectingKanji--ontop {
+    top: 0;
+    transition-property: top; }
 
 .selectingKanji__container {
   width: 100%;
@@ -1579,6 +1584,18 @@ input[type="search"].jnSearchBox__textbox {
   table-layout: fixed;
   margin: 0 auto;
   text-align: center; }
+
+.atejiBox__col--using {
+  background: #fff2cc;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  animation-name: usingKanji__suun; }
+
+@keyframes usingKanji__suun {
+  from {
+    background: #fffa82; }
+  to {
+    background: rgba(255, 250, 130, 0); } }
 
 .atejiBox__cell {
   margin: 0;
