--- a/riottags/japaname-searchbox.jade
+++ b/riottags/japaname-searchbox.jade
@@ -1,11 +1,13 @@
 japaname-searchbox
-  form.jnSearchBox(role="search" method="get" action="/names/candidates/" style="font-size:{opts.fontSize ||'3rem' };height:{opts.height || '5rem'}")
+  form.jnSearchBox(role="search" method="get" action="/names/candidates/" style="font-size:{opts.font_size ||'3rem' };height:{opts.height || '5rem'}")
     button.jnSearchBox__button(type="submit" name="japaname_search_button" onfocus="{buttonFocused}") {opts.button || "Go!"}
     input.jnSearchBox__textbox(id="original_name" name="original_name" 
       type="search" placeholder="{opts.placeholder || 'Enter Your Name'}" 
       value="{opts.text || ''}" onfocus="{opts.onfocus}" onblur="{opts.onblur}")
 
   script.
+    console.log(opts);
+
     if(opts.focus){
       window.onload = function(){
         this.original_name.focus();
